--- a/src/components/layout/style.css
+++ b/src/components/layout/style.css
@@ -1,1 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+
+.ant-layout-header{
+    background: rgb(47, 84, 235) !important;
+    padding: 0 20px !important;
+}
